# CardStarter-bulk-airdrop-script

./: .gitignore  Makefile  README.md  cabal-haskell.nix.project  cabal.project  config.conf  eth-shell.nix  flake.nix  hie.yaml  shell.nix  token-airdrop.cabal
.github/workflows/: integrate.yaml
executables/TokenAirdrop/: Main.hs
nix/: README.md  ci.nix  sources.json  tslint.nix
src/: BeneficiariesFile.hs  CommandLine.hs  Config.hs  TokenAirdrop.hs
src/FakePAB/: Address.hs  CardanoCLI.hs  Constraints.hs  PreBalance.hs  UtxoParser.hs
test/: Spec.hs
test/Spec/: BeneficiariesFile.hs
test/Spec/FakePAB/: Address.hs
