cabal-version:      3.0
name:               token-airdrop
version:            0.1
synopsis:           Batch airdropping tokens with a CLI
homepage:           https://github.com/mlabs-haskell/CardStarter-TokenAirdrop
bug-reports:        https://github.com/mlabs-haskell/CardStarter-TokenAirdrop
license:
license-file:
author:             MLabs
maintainer:         gergely@mlabs.city
copyright:          TODO
category:           CardStarter
build-type:         Simple
tested-with:        GHC ==8.10.4
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/CardStarter-TokenAirdrop

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fplugin=RecordDotPreprocessor

  build-depends:
    , base                     ^>=4.14
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

-- Libraries

library
  import:          common-lang
  exposed-modules: TokenAirdrop
  other-modules:
    BeneficiariesFile
    Config
    FakePAB.CardanoCLI
    FakePAB.Constraints
    FakePAB.PreBalance
    FakePAB.UtxoParser

  build-depends:
    , aeson                 ^>=1.5.0.0
    , aeson-casing
    , ansi-terminal
    , attoparsec            >=0.13.2.2
    , bytestring            ^>=0.10.12.0
    , cardano-api
    , cardano-crypto
    , cardano-prelude
    , containers
    , cryptonite
    , data-default
    , data-default-class
    , either
    , freer-extras
    , freer-simple
    , lens
    , memory
    , optparse-applicative
    , playground-common
    , plutus-chain-index
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-pab
    , plutus-tx
    , plutus-tx-plugin
    , prettyprinter
    , process
    , row-types
    , serialise
    , split
    , stm
    , text                  ^>=1.2.4.0
    , uuid
    , vector                ^>=0.12.1.2

  hs-source-dirs:  src

-- Executables


executable token-airdrop
  import:         common-lang
  build-depends:  token-airdrop
  main-is:        Main.hs
  hs-source-dirs: executables/TokenAirdrop
